<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/big_padding"
        android:text="@string/hint_nota"
        android:textColor="@color/purple_700"
        android:textSize="34sp"
        android:textAlignment="center"
        android:textStyle="bold"/>


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_margin="@dimen/big_padding"
        tools:srcCompat="@tools:sample/avatars"
        android:src="@drawable/recordatorio"/>

    <Button
        android:id="@+id/btn_ir_notas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/big_padding"
        android:text="@string/btn_notas" />

    <Button
        android:id="@+id/btn_ir_tareas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/big_padding"
        android:text="@string/btn_tareas" />

</LinearLayout>